More work on the code and unit tests